# file-client-test

./: README.md  pyproject.toml
file_client/: cli.py
file_client/backend_clients/: __init__.py  client.py  client_exceptions.py
file_client/backend_clients/grpc_client/: grpc_client.py  service_file_pb2.py  service_file_pb2_grpc.py
file_client/backend_clients/rest_client/: rest_client.py
tests/: test_cli.py  test_file_client.py
tests/backend_clients/: test_client.py  test_rest_client.py
tests/helpers/: fixtures.py
